Update to zi 0.3.7-SNAPSHOT, and fix testuser profile